tests/paczka1/small_fuzzy/87619841.err
Error in line 6: CHLRd9KTEU A456 37,7
Error in line 12: 3TzkFzLYIY7 A456 66,5
